--- a/src/css/_global.scss
+++ b/src/css/_global.scss
@@ -1,3 +1,4 @@
 body {
   background-color: #3F51B5;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
